update: fix position logo respon mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -283,6 +283,7 @@ footer button:hover {
     text-align: center;
   }
   header img {
+    margin: 0;
     width: 4rem;
     height: auto;
   }
