--- a/public/scss/_responsive_design.scss
+++ b/public/scss/_responsive_design.scss
@@ -31,6 +31,7 @@
         text-align: center;
 
         img {
+            margin: 0;
             width: 4rem;
             height: auto;
         }
